Add CI/CD setup, pre-commit configuration, and security checks for libQ. This commit introduces GitHub Actions workflows for continuous integration, continuous deployment, and security validation, along with a pre-commit configuration file to enforce code quality checks. Additionally, it includes scripts for building WASM and performing security checks, enhancing the development and release process.

--- a/clippy.toml
+++ b/clippy.toml
@@ -19,5 +19,4 @@ disallowed-types = [
 doc-valid-idents = []
 
 # Additional warnings
-warn-on-all-wildcards = true
-warn-on-all-unsafe = true
+warn-on-all-wildcard-imports = true
