--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,186 @@ target
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+# Additional Rust/Cargo patterns
+Cargo.lock
+*.orig
+*.rej
+*.swp
+*.swo
+*~
+
+# Build artifacts
+dist/
+build/
+out/
+
+# WASM build artifacts (already covered by pkg/.gitignore but good to have here too)
+pkg/*.wasm
+pkg/*.js
+pkg/*.d.ts
+pkg/*.checksum
+pkg/*.sha256
+
+# Node.js (for WASM testing and development)
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.npm
+.yarn-integrity
+
+# Environment files
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# IDE and editor files
+.vscode/
+.idea/
+*.sublime-project
+*.sublime-workspace
+.atom/
+.brackets.json
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Logs
+*.log
+logs/
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Coverage directory used by tools like istanbul
+coverage/
+*.lcov
+
+# nyc test coverage
+.nyc_output
+
+# Dependency directories
+jspm_packages/
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# Microbundle cache
+.rpt2_cache/
+.rts2_cache_cjs/
+.rts2_cache_es/
+.rts2_cache_umd/
+
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# Yarn Integrity file
+.yarn-integrity
+
+# parcel-bundler cache (https://parceljs.org/)
+.cache
+.parcel-cache
+
+# next.js build output
+.next
+
+# nuxt.js build output
+.nuxt
+
+# vuepress build output
+.vuepress/dist
+
+# Serverless directories
+.serverless/
+
+# FuseBox cache
+.fusebox/
+
+# DynamoDB Local files
+.dynamodb/
+
+# TernJS port file
+.tern-port
+
+# Stores VSCode versions used for testing VSCode extensions
+.vscode-test
+
+# Temporary folders
+tmp/
+temp/
+
+# Security and key files
+*.key
+*.pem
+*.p12
+*.pfx
+*.crt
+*.csr
+*.srl
+
+# Benchmark results
+criterion/
+
+# Documentation build
+docs/_build/
+docs/build/
+
+# Backup files
+*.bak
+*.backup
+*.old
+
+# Test artifacts
+test-results/
+test-output/
+
+# Profiling data
+*.prof
+*.flamegraph
+
+# Memory dumps
+*.dump
+*.hprof
+
+# Performance data
+perf.data
+perf.data.old
+
+# LLVM coverage
+*.profraw
+*.profdata
+
+# Code coverage
+*.gcov
+*.gcda
+*.gcno
+
+# Clangd compilation database
+compile_commands.json
+
+# Rust analyzer
+rust-project.json
+
+# Cargo audit
+Cargo.audit.toml
+
+# Local configuration
+.cargo/config.toml
