--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,18 +10,22 @@ keywords = ["cryptography", "post-quantum", "security", "wasm"]
 categories = ["cryptography", "wasm"]
 readme = "README.md"
 
+[package.metadata.wasm-pack.profile.release]
+wasm-opt = false
+
 [lib]
 name = "libq"
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
 # Core cryptographic dependencies
-getrandom = { version = "0.3.3", features = ["std"] }
-rand = "0.9.2"
-rand_core = "0.9.3"
+getrandom = { version = "0.2.15", features = ["js"] }
+
+rand = "0.8.5"
+rand_core = "0.6.4"
 
 # Zeroize for secure memory clearing
-zeroize = "1.8.1"
+zeroize = { version = "1.8.1", features = ["derive"] }
 
 # Serde for serialization (optional)
 serde = { version = "1.0.219", optional = true, features = ["derive"] }
@@ -42,7 +46,7 @@ proptest = "1.7.0"
 quickcheck = "1.0.3"
 
 # WASM testing
-wasm-bindgen-test = "0.3.5"
+wasm-bindgen-test = "0.3.50"
 
 [features]
 default = ["std"]
@@ -110,8 +114,6 @@ codegen-units = 1
 all-features = true
 rustdoc-args = ["--cfg", "docsrs"]
 
-[package.metadata.wasm-pack.profile.release]
-wasm-opt = ['-Os']
 
-[package.metadata.wasm-pack.profile.dev]
-wasm-opt = ['-O0']
+
+
