Update WASM target configuration and dependencies; enhance CI workflows. This commit modifies the `build.rs` to set the correct configuration for WASM targets, updates the `Cargo.toml` and `Cargo.lock` to use newer versions of dependencies, and improves CI workflows by adding installations for `cargo-audit` and `cargo-outdated`. Additionally, it introduces constant-time verification and timing analysis tests to ensure cryptographic operations are secure and consistent.

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,8 +1,8 @@
 [target.wasm32-unknown-unknown]
-rustflags = ["--cfg", "getrandom_wasm_js"]
+rustflags = ['--cfg', 'getrandom_backend="wasm_js"']
 
 [target.wasm32-unknown-emscripten]
-rustflags = ["--cfg", "getrandom_wasm_js"]
+rustflags = ['--cfg', 'getrandom_backend="wasm_js"']
 
 [env]
-CARGO_CFG_GETRANDOM_WASM_JS = "1"
+CARGO_CFG_GETRANDOM_BACKEND = "wasm_js"
