--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -23,6 +23,9 @@ jobs:
         with:
           components: rustfmt, clippy
       
+      - name: Install cargo-audit
+        run: cargo install cargo-audit
+      
       - name: Cache dependencies
         uses: actions/cache@v3
         with:
