--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -53,6 +53,9 @@ jobs:
       - name: Install Rust
         uses: dtolnay/rust-toolchain@stable
       
+      - name: Install cargo-audit
+        run: cargo install cargo-audit
+      
       - name: Cache dependencies
         uses: actions/cache@v3
         with:
