--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,10 +19,10 @@ crate-type = ["cdylib", "rlib"]
 
 [dependencies]
 # Core cryptographic dependencies
-getrandom = { version = "0.2.15", features = ["js"] }
+getrandom = { version = "0.3.3", features = ["wasm_js"] }
 
-rand = "0.8.5"
-rand_core = "0.6.4"
+rand = "0.9.2"
+rand_core = "0.9.3"
 
 # Zeroize for secure memory clearing
 zeroize = { version = "1.8.1", features = ["derive"] }
@@ -72,7 +72,7 @@ openzkp = []
 serde = ["dep:serde"]
 
 # WASM features
-wasm = ["wasm-bindgen", "js-sys", "web-sys"]
+wasm = ["wasm-bindgen", "js-sys", "web-sys", "getrandom/wasm_js"]
 
 # Performance features
 simd = []
