--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -118,10 +118,10 @@ jobs:
             ${{ runner.os }}-cargo-
       
       - name: Run tests
-        run: cargo test --target ${{ matrix.target }} --features "${{ matrix.features }}" --verbose
+        run: cargo test --target ${{ matrix.target }} --features "${{ matrix.features }}" --test constant_time --verbose
       
       - name: Run tests with release optimizations
-        run: cargo test --target ${{ matrix.target }} --features "${{ matrix.features }}" --release --verbose
+        run: cargo test --target ${{ matrix.target }} --features "${{ matrix.features }}" --test constant_time --release --verbose
 
   # WASM compilation and testing
   wasm:
@@ -225,7 +225,6 @@ jobs:
         target:
           - x86_64-unknown-linux-gnu
           - x86_64-pc-windows-msvc
-          - aarch64-unknown-linux-gnu
     
     steps:
       - uses: actions/checkout@v4
@@ -266,6 +265,65 @@ jobs:
         run: |
           echo "Build artifacts for target: ${{ matrix.target }}"
           ls -la target/${{ matrix.target }}/release/ || echo "No build artifacts found"
+
+  # ARM64 compilation (separate job for proper toolchain)
+  cross-compile-arm64:
+    name: Cross-Platform Build (ARM64)
+    runs-on: ubuntu-latest
+    env:
+      CARGO_TERM_COLOR: always
+      RUST_BACKTRACE: 1
+    
+    steps:
+      - uses: actions/checkout@v4
+      
+      - name: Install Rust
+        uses: dtolnay/rust-toolchain@stable
+      
+      - name: Add ARM64 target
+        run: rustup target add aarch64-unknown-linux-gnu
+      
+      - name: Install cross-compilation tools
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y gcc-aarch64-linux-gnu g++-aarch64-linux-gnu
+      
+      - name: Configure cross-compilation
+        run: |
+          echo '[target.aarch64-unknown-linux-gnu]' >> ~/.cargo/config
+          echo 'linker = "aarch64-linux-gnu-gcc"' >> ~/.cargo/config
+          echo 'ar = "aarch64-linux-gnu-ar"' >> ~/.cargo/config
+      
+      - name: Show target info
+        run: rustup target list --installed
+      
+      - name: Cache dependencies
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.cargo/registry
+            ~/.cargo/git
+            target
+          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-cargo-
+      
+      - name: Build for ARM64
+        run: |
+          echo "Building for target: aarch64-unknown-linux-gnu"
+          cargo build --target aarch64-unknown-linux-gnu --features "all-algorithms" --release
+          echo "Build completed successfully"
+      
+      - name: Check for ARM64
+        run: |
+          echo "Checking for target: aarch64-unknown-linux-gnu"
+          cargo check --target aarch64-unknown-linux-gnu --features "all-algorithms"
+          echo "Check completed successfully"
+      
+      - name: Show build artifacts
+        run: |
+          echo "Build artifacts for target: aarch64-unknown-linux-gnu"
+          ls -la target/aarch64-unknown-linux-gnu/release/ || echo "No build artifacts found"
 
   # macOS compilation (separate job for proper toolchain)
   cross-compile-macos:
