--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -102,9 +102,8 @@ jobs:
       
       - name: Install Rust
         uses: dtolnay/rust-toolchain@stable
-      
-      - name: Add target
-        run: rustup target add ${{ matrix.target }}
+        with:
+          components: rustfmt, clippy
       
       - name: Cache dependencies
         uses: actions/cache@v3
@@ -118,45 +117,23 @@ jobs:
             ${{ runner.os }}-cargo-
       
       - name: Run tests
-        run: cargo test --target ${{ matrix.target }} --features "${{ matrix.features }}" --test constant_time --verbose
+        run: cargo test --features "${{ matrix.features }}" --verbose
       
       - name: Run tests with release optimizations
-        run: cargo test --target ${{ matrix.target }} --features "${{ matrix.features }}" --test constant_time --release --verbose
+        run: cargo test --features "${{ matrix.features }}" --release --verbose
 
   # WASM compilation and testing
   wasm:
     name: WASM Build & Test
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     timeout-minutes: 30
     steps:
       - uses: actions/checkout@v4
       
-      - name: Debug network connectivity
-        run: |
-          echo "Testing network connectivity..."
-          curl -I https://static.rust-lang.org/ || echo "Failed to reach rust-lang.org"
-          curl -I https://github.com/ || echo "Failed to reach github.com"
-          echo "Network test completed"
-      
-      - name: Install Rust (with retry)
-        run: |
-          echo "Installing Rust toolchain..."
-          for i in {1..3}; do
-            echo "Attempt $i of 3"
-            if rustup toolchain install stable --profile minimal --no-self-update; then
-              echo "Rust installation successful"
-              break
-            else
-              echo "Rust installation failed, attempt $i"
-              if [ $i -eq 3 ]; then
-                echo "All attempts failed"
-                exit 1
-              fi
-              sleep 10
-            fi
-          done
-          rustup default stable
-          rustup component add rustfmt clippy
+      - name: Install Rust
+        uses: dtolnay/rust-toolchain@stable
+        with:
+          components: rustfmt, clippy
       
       - name: Install wasm-pack
         uses: jetli/wasm-pack-action@v0.4.0
@@ -207,6 +184,8 @@ jobs:
       
       - name: Install Rust
         uses: dtolnay/rust-toolchain@stable
+        with:
+          components: rustfmt, clippy
       
       - name: Cache dependencies
         uses: actions/cache@v3
@@ -231,6 +210,8 @@ jobs:
       
       - name: Install Rust
         uses: dtolnay/rust-toolchain@stable
+        with:
+          components: rustfmt, clippy
       
       - name: Cache dependencies
         uses: actions/cache@v3
@@ -266,12 +247,8 @@ jobs:
       
       - name: Install Rust
         uses: dtolnay/rust-toolchain@stable
-      
-      - name: Add target
-        run: rustup target add ${{ matrix.target }}
-      
-      - name: Show target info
-        run: rustup target list --installed
+        with:
+          components: rustfmt, clippy
       
       - name: Cache dependencies
         uses: actions/cache@v3
@@ -318,12 +295,8 @@ jobs:
       
       - name: Install Rust
         uses: dtolnay/rust-toolchain@stable
-      
-      - name: Add target
-        run: rustup target add ${{ matrix.target }}
-      
-      - name: Show target info
-        run: rustup target list --installed
+        with:
+          components: rustfmt, clippy
       
       - name: Cache dependencies
         uses: actions/cache@v3
@@ -366,9 +339,8 @@ jobs:
       
       - name: Install Rust
         uses: dtolnay/rust-toolchain@stable
-      
-      - name: Add ARM64 target
-        run: rustup target add aarch64-unknown-linux-gnu
+        with:
+          components: rustfmt, clippy
       
       - name: Install cross-compilation tools
         run: |
@@ -377,12 +349,10 @@ jobs:
       
       - name: Configure cross-compilation
         run: |
+          mkdir -p ~/.cargo
           echo '[target.aarch64-unknown-linux-gnu]' >> ~/.cargo/config
           echo 'linker = "aarch64-linux-gnu-gcc"' >> ~/.cargo/config
           echo 'ar = "aarch64-linux-gnu-ar"' >> ~/.cargo/config
-      
-      - name: Show target info
-        run: rustup target list --installed
       
       - name: Cache dependencies
         uses: actions/cache@v3
@@ -430,12 +400,8 @@ jobs:
       
       - name: Install Rust
         uses: dtolnay/rust-toolchain@stable
-      
-      - name: Add target
-        run: rustup target add ${{ matrix.target }}
-      
-      - name: Show target info
-        run: rustup target list --installed
+        with:
+          components: rustfmt, clippy
       
       - name: Cache dependencies
         uses: actions/cache@v3
@@ -474,6 +440,8 @@ jobs:
       
       - name: Install Rust
         uses: dtolnay/rust-toolchain@stable
+        with:
+          components: rustfmt, clippy
       
       - name: Cache dependencies
         uses: actions/cache@v3
