--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -329,24 +329,8 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       
-      - name: Install Rust (with retry)
-        run: |
-          echo "Installing Rust toolchain with retry logic..."
-          for i in {1..3}; do
-            echo "Attempt $i of 3"
-            if curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --default-toolchain stable --profile minimal --component rustfmt --component clippy; then
-              echo "Rust installation successful"
-              break
-            else
-              echo "Rust installation failed, attempt $i"
-              if [ $i -eq 3 ]; then
-                echo "All attempts failed"
-                exit 1
-              fi
-              sleep 30
-            fi
-          done
-          source ~/.cargo/env
+      - name: Install Rust
+        uses: dtolnay/rust-toolchain@stable
       
       - name: Cache dependencies
         uses: actions/cache@v4
@@ -391,24 +375,8 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       
-      - name: Install Rust (with retry)
-        run: |
-          echo "Installing Rust toolchain with retry logic..."
-          for i in {1..3}; do
-            echo "Attempt $i of 3"
-            if curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --default-toolchain stable --profile minimal --component rustfmt --component clippy; then
-              echo "Rust installation successful"
-              break
-            else
-              echo "Rust installation failed, attempt $i"
-              if [ $i -eq 3 ]; then
-                echo "All attempts failed"
-                exit 1
-              fi
-              sleep 30
-            fi
-          done
-          source ~/.cargo/env
+      - name: Install Rust
+        uses: dtolnay/rust-toolchain@stable
       
       - name: Cache dependencies
         uses: actions/cache@v4
@@ -449,24 +417,8 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       
-      - name: Install Rust (with retry)
-        run: |
-          echo "Installing Rust toolchain with retry logic..."
-          for i in {1..3}; do
-            echo "Attempt $i of 3"
-            if curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --default-toolchain stable --profile minimal --component rustfmt --component clippy; then
-              echo "Rust installation successful"
-              break
-            else
-              echo "Rust installation failed, attempt $i"
-              if [ $i -eq 3 ]; then
-                echo "All attempts failed"
-                exit 1
-              fi
-              sleep 30
-            fi
-          done
-          source ~/.cargo/env
+      - name: Install Rust
+        uses: dtolnay/rust-toolchain@stable
       
       - name: Verify Rust installation
         run: |
