--- a/clippy.toml
+++ b/clippy.toml
@@ -1,4 +1,4 @@
-# libQ Clippy Configuration
+# lib-Q Clippy Configuration
 # Additional lints for security and code quality
 
 # Security-focused lints
